# rusty-dock

./: Cargo.toml  README.md  TODO.md  clippy.toml
src/: animations.rs  app_launcher.rs  bootstrap.rs  config.rs  config_window_iced.rs  main.rs  process_monitor.rs  renderer.rs
