[package]
name = "rusty-dock"
version = "0.2.1"
edition = "2021"

[dependencies]
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.8"
cairo-rs = { version = "0.22.0", features = ["png", "svg"] }
freedesktop-desktop-entry = "0.8.1"
freedesktop-icons = "0.4.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
toml = "0.8"
dirs = "6.0.0"
chrono = "0.4"
device_query = "4.0.1"
iced = { version = "0.12", features = ["tokio", "image", "svg"] }
resvg = "0.44"

[dependencies.image]
version = "0.25.5"
default-features = false
features = ["png", "jpeg"]